--- a/css/coll.css
+++ b/css/coll.css
@@ -1,172 +1,172 @@
-.s128 {
-    background-image: url(../img/s128-coll-01.png);
+.s64-coll {
+    background-image: url(../img/s64-coll-01.png);
     background-repeat: no-repeat;
     display: block;
-    width: 128px;
-    height: 128px;
+    width: 64px;
+    height: 64px;
 }
 
-.s128-coll-as-1 {
+.s64-coll-as-1 {
     background-position: 0 0;
 }
 
-.s128-coll-as-2 {
+.s64-coll-as-2 {
+    background-position: -64px 0;
+}
+
+.s64-coll-as-3 {
     background-position: -128px 0;
 }
 
-.s128-coll-as-3 {
+.s64-coll-as-4 {
+    background-position: -192px 0;
+}
+
+.s64-coll-as-5 {
     background-position: -256px 0;
 }
 
-.s128-coll-as-4 {
-    background-position: -384px 0;
+.s64-coll-as-6 {
+    background-position: -320px 0;
 }
 
-.s128-coll-as-5 {
-    background-position: -512px 0;
+.s64-coll-h-1 {
+    background-position: 0 -64px;
 }
 
-.s128-coll-as-6 {
-    background-position: -640px 0;
+.s64-coll-h-2 {
+    background-position: -64px -64px;
 }
 
-.s128-coll-h-1 {
+.s64-coll-h-3 {
+    background-position: -128px -64px;
+}
+
+.s64-coll-h-4 {
+    background-position: -192px -64px;
+}
+
+.s64-coll-l-1 {
+    background-position: -256px -64px;
+}
+
+.s64-coll-l-2 {
+    background-position: -320px -64px;
+}
+
+.s64-coll-l-3 {
     background-position: 0 -128px;
 }
 
-.s128-coll-h-2 {
+.s64-coll-l-4 {
+    background-position: -64px -128px;
+}
+
+.s64-coll-l-5 {
     background-position: -128px -128px;
 }
 
-.s128-coll-h-3 {
+.s64-coll-l-6 {
+    background-position: -192px -128px;
+}
+
+.s64-coll-pi-1 {
     background-position: -256px -128px;
 }
 
-.s128-coll-h-4 {
-    background-position: -384px -128px;
+.s64-coll-pi-2 {
+    background-position: -320px -128px;
 }
 
-.s128-coll-l-1 {
-    background-position: -512px -128px;
+.s64-coll-pi-3 {
+    background-position: 0 -192px;
 }
 
-.s128-coll-l-2 {
-    background-position: -640px -128px;
+.s64-coll-pi-4 {
+    background-position: -64px -192px;
 }
 
-.s128-coll-l-3 {
+.s64-coll-pi-5 {
+    background-position: -128px -192px;
+}
+
+.s64-coll-pi-6 {
+    background-position: -192px -192px;
+}
+
+.s64-coll-s-1 {
+    background-position: -256px -192px;
+}
+
+.s64-coll-s-2 {
+    background-position: -320px -192px;
+}
+
+.s64-coll-s-3 {
     background-position: 0 -256px;
 }
 
-.s128-coll-l-4 {
+.s64-coll-s-4 {
+    background-position: -64px -256px;
+}
+
+.s64-coll-s-5 {
     background-position: -128px -256px;
 }
 
-.s128-coll-l-5 {
+.s64-coll-s-6 {
+    background-position: -192px -256px;
+}
+
+.s64-coll-t-1 {
     background-position: -256px -256px;
 }
 
-.s128-coll-l-6 {
-    background-position: -384px -256px;
+.s64-coll-t-2 {
+    background-position: -320px -256px;
 }
 
-.s128-coll-pi-1 {
-    background-position: -512px -256px;
+.s64-coll-t-3 {
+    background-position: 0 -320px;
 }
 
-.s128-coll-pi-2 {
-    background-position: -640px -256px;
+.s64-coll-t-4 {
+    background-position: -64px -320px;
 }
 
-.s128-coll-pi-3 {
-    background-position: 0 -384px;
+.s64-coll-t-5 {
+    background-position: -128px -320px;
 }
 
-.s128-coll-pi-4 {
-    background-position: -128px -384px;
+.s64-coll-t-6 {
+    background-position: -192px -320px;
 }
 
-.s128-coll-pi-5 {
-    background-position: -256px -384px;
+.s64-coll-u-1 {
+    background-position: -256px -320px;
 }
 
-.s128-coll-pi-6 {
-    background-position: -384px -384px;
+.s64-coll-u-2 {
+    background-position: -320px -320px;
 }
 
-.s128-coll-s-1 {
-    background-position: -512px -384px;
+.s64-coll-u-3 {
+    background-position: -384px 0;
 }
 
-.s128-coll-s-2 {
-    background-position: -640px -384px;
+.s64-coll-u-4 {
+    background-position: -384px -64px;
 }
 
-.s128-coll-s-3 {
-    background-position: 0 -512px;
+.s64-coll-u-5 {
+    background-position: -384px -128px;
 }
 
-.s128-coll-s-4 {
-    background-position: -128px -512px;
+.s64-coll-u-6 {
+    background-position: -384px -192px;
 }
 
-.s128-coll-s-5 {
-    background-position: -256px -512px;
-}
-
-.s128-coll-s-6 {
-    background-position: -384px -512px;
-}
-
-.s128-coll-t-1 {
-    background-position: -512px -512px;
-}
-
-.s128-coll-t-2 {
-    background-position: -640px -512px;
-}
-
-.s128-coll-t-3 {
-    background-position: 0 -640px;
-}
-
-.s128-coll-t-4 {
-    background-position: -128px -640px;
-}
-
-.s128-coll-t-5 {
-    background-position: -256px -640px;
-}
-
-.s128-coll-t-6 {
-    background-position: -384px -640px;
-}
-
-.s128-coll-u-1 {
-    background-position: -512px -640px;
-}
-
-.s128-coll-u-2 {
-    background-position: -640px -640px;
-}
-
-.s128-coll-u-3 {
-    background-position: -768px 0;
-}
-
-.s128-coll-u-4 {
-    background-position: -768px -128px;
-}
-
-.s128-coll-u-5 {
-    background-position: -768px -256px;
-}
-
-.s128-coll-u-6 {
-    background-position: -768px -384px;
-}
-
-.s96 {
+.s96-coll {
     background-image: url(../img/s96-coll-01.png);
     background-repeat: no-repeat;
     display: block;
@@ -334,170 +334,170 @@
     background-position: -576px -288px;
 }
 
-.s64 {
-    background-image: url(../img/s64-coll-01.png);
+.s128-coll {
+    background-image: url(../img/s128-coll-01.png);
     background-repeat: no-repeat;
     display: block;
-    width: 64px;
-    height: 64px;
+    width: 128px;
+    height: 128px;
 }
 
-.s64-coll-as-1 {
+.s128-coll-as-1 {
     background-position: 0 0;
 }
 
-.s64-coll-as-2 {
-    background-position: -64px 0;
-}
-
-.s64-coll-as-3 {
+.s128-coll-as-2 {
     background-position: -128px 0;
 }
 
-.s64-coll-as-4 {
-    background-position: -192px 0;
-}
-
-.s64-coll-as-5 {
+.s128-coll-as-3 {
     background-position: -256px 0;
 }
 
-.s64-coll-as-6 {
-    background-position: -320px 0;
-}
-
-.s64-coll-h-1 {
-    background-position: 0 -64px;
-}
-
-.s64-coll-h-2 {
-    background-position: -64px -64px;
-}
-
-.s64-coll-h-3 {
-    background-position: -128px -64px;
-}
-
-.s64-coll-h-4 {
-    background-position: -192px -64px;
-}
-
-.s64-coll-l-1 {
-    background-position: -256px -64px;
-}
-
-.s64-coll-l-2 {
-    background-position: -320px -64px;
-}
-
-.s64-coll-l-3 {
-    background-position: 0 -128px;
-}
-
-.s64-coll-l-4 {
-    background-position: -64px -128px;
-}
-
-.s64-coll-l-5 {
-    background-position: -128px -128px;
-}
-
-.s64-coll-l-6 {
-    background-position: -192px -128px;
-}
-
-.s64-coll-pi-1 {
-    background-position: -256px -128px;
-}
-
-.s64-coll-pi-2 {
-    background-position: -320px -128px;
-}
-
-.s64-coll-pi-3 {
-    background-position: 0 -192px;
-}
-
-.s64-coll-pi-4 {
-    background-position: -64px -192px;
-}
-
-.s64-coll-pi-5 {
-    background-position: -128px -192px;
-}
-
-.s64-coll-pi-6 {
-    background-position: -192px -192px;
-}
-
-.s64-coll-s-1 {
-    background-position: -256px -192px;
-}
-
-.s64-coll-s-2 {
-    background-position: -320px -192px;
-}
-
-.s64-coll-s-3 {
-    background-position: 0 -256px;
-}
-
-.s64-coll-s-4 {
-    background-position: -64px -256px;
-}
-
-.s64-coll-s-5 {
-    background-position: -128px -256px;
-}
-
-.s64-coll-s-6 {
-    background-position: -192px -256px;
-}
-
-.s64-coll-t-1 {
-    background-position: -256px -256px;
-}
-
-.s64-coll-t-2 {
-    background-position: -320px -256px;
-}
-
-.s64-coll-t-3 {
-    background-position: 0 -320px;
-}
-
-.s64-coll-t-4 {
-    background-position: -64px -320px;
-}
-
-.s64-coll-t-5 {
-    background-position: -128px -320px;
-}
-
-.s64-coll-t-6 {
-    background-position: -192px -320px;
-}
-
-.s64-coll-u-1 {
-    background-position: -256px -320px;
-}
-
-.s64-coll-u-2 {
-    background-position: -320px -320px;
-}
-
-.s64-coll-u-3 {
+.s128-coll-as-4 {
     background-position: -384px 0;
 }
 
-.s64-coll-u-4 {
-    background-position: -384px -64px;
+.s128-coll-as-5 {
+    background-position: -512px 0;
 }
 
-.s64-coll-u-5 {
+.s128-coll-as-6 {
+    background-position: -640px 0;
+}
+
+.s128-coll-h-1 {
+    background-position: 0 -128px;
+}
+
+.s128-coll-h-2 {
+    background-position: -128px -128px;
+}
+
+.s128-coll-h-3 {
+    background-position: -256px -128px;
+}
+
+.s128-coll-h-4 {
     background-position: -384px -128px;
 }
 
-.s64-coll-u-6 {
-    background-position: -384px -192px;
+.s128-coll-l-1 {
+    background-position: -512px -128px;
+}
+
+.s128-coll-l-2 {
+    background-position: -640px -128px;
+}
+
+.s128-coll-l-3 {
+    background-position: 0 -256px;
+}
+
+.s128-coll-l-4 {
+    background-position: -128px -256px;
+}
+
+.s128-coll-l-5 {
+    background-position: -256px -256px;
+}
+
+.s128-coll-l-6 {
+    background-position: -384px -256px;
+}
+
+.s128-coll-pi-1 {
+    background-position: -512px -256px;
+}
+
+.s128-coll-pi-2 {
+    background-position: -640px -256px;
+}
+
+.s128-coll-pi-3 {
+    background-position: 0 -384px;
+}
+
+.s128-coll-pi-4 {
+    background-position: -128px -384px;
+}
+
+.s128-coll-pi-5 {
+    background-position: -256px -384px;
+}
+
+.s128-coll-pi-6 {
+    background-position: -384px -384px;
+}
+
+.s128-coll-s-1 {
+    background-position: -512px -384px;
+}
+
+.s128-coll-s-2 {
+    background-position: -640px -384px;
+}
+
+.s128-coll-s-3 {
+    background-position: 0 -512px;
+}
+
+.s128-coll-s-4 {
+    background-position: -128px -512px;
+}
+
+.s128-coll-s-5 {
+    background-position: -256px -512px;
+}
+
+.s128-coll-s-6 {
+    background-position: -384px -512px;
+}
+
+.s128-coll-t-1 {
+    background-position: -512px -512px;
+}
+
+.s128-coll-t-2 {
+    background-position: -640px -512px;
+}
+
+.s128-coll-t-3 {
+    background-position: 0 -640px;
+}
+
+.s128-coll-t-4 {
+    background-position: -128px -640px;
+}
+
+.s128-coll-t-5 {
+    background-position: -256px -640px;
+}
+
+.s128-coll-t-6 {
+    background-position: -384px -640px;
+}
+
+.s128-coll-u-1 {
+    background-position: -512px -640px;
+}
+
+.s128-coll-u-2 {
+    background-position: -640px -640px;
+}
+
+.s128-coll-u-3 {
+    background-position: -768px 0;
+}
+
+.s128-coll-u-4 {
+    background-position: -768px -128px;
+}
+
+.s128-coll-u-5 {
+    background-position: -768px -256px;
+}
+
+.s128-coll-u-6 {
+    background-position: -768px -384px;
 }
