--- a/css/oll.css
+++ b/css/oll.css
@@ -1,5 +1,5 @@
 .s64-oll {
-    background-image: url(../img/s64-oll-01.png);
+    background-image: url(../img/s64-oll-02.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -239,7 +239,7 @@
 }
 
 .s96-oll {
-    background-image: url(../img/s96-oll-01.png);
+    background-image: url(../img/s96-oll-02.png);
     background-repeat: no-repeat;
     display: block;
 	width: 96px;
@@ -479,11 +479,12 @@
 }
 
 .s128-oll {
-    background-image: url(../img/s128-oll-01.png);
+    background-image: url(../img/s128-oll-02.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
-    height: 128px;}
+    height: 128px;
+}
 
 .s128-oll-00 {
     background-position: 0 0;
