--- a/css/common.css
+++ b/css/common.css
@@ -33,9 +33,27 @@ p
   font-size: 0.9em;
 }
 
+/* Abbreviations */
 abbr.dotted
 {
-	border-bottom: 1px dotted;
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+
+#tooltip
+{
+  position: absolute;
+  background-color: white;
+  border: 2px solid #000;
+  padding: 8px 8px 8px 8px;
+  font-family: "Arial", sans-serif;
+  font-size: 0.8em;
+  visibility: hidden;
+}
+
+#tooltip[data-timestamp]
+{
+	visibility: visible;
 }
 
 /* Grid view */
