--- a/css/2l-oll.css
+++ b/css/2l-oll.css
@@ -1,5 +1,5 @@
 .s64-2l-oll {
-    background-image: url(../img/s64-2l-oll-04.png);
+    background-image: url(../img/2l-oll-s64-05.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -55,7 +55,7 @@
 }
 
 .s96-2l-oll {
-    background-image: url(../img/s96-2l-oll-04.png);
+    background-image: url(../img/2l-oll-s96-05.png);
     background-repeat: no-repeat;
     display: block;
     width: 96px;
@@ -111,7 +111,7 @@
 }
 
 .s128-2l-oll {
-    background-image: url(../img/s128-2l-oll-04.png);
+    background-image: url(../img/2l-oll-s128-05.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
