--- a/css/oll.css
+++ b/css/oll.css
@@ -1,5 +1,5 @@
 .s64-oll {
-    background-image: url(../img/s64-oll-05.png);
+    background-image: url(../img/oll-s64-05.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -235,7 +235,7 @@
 }
 
 .s96-oll {
-    background-image: url(../img/s96-oll-05.png);
+    background-image: url(../img/oll-s96-05.png);
     background-repeat: no-repeat;
     display: block;
 	width: 96px;
@@ -471,7 +471,7 @@
 }
 
 .s128-oll {
-    background-image: url(../img/s128-oll-05.png);
+    background-image: url(../img/oll-s128-05.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
