--- a/css/pll.css
+++ b/css/pll.css
@@ -1,5 +1,5 @@
 .s64-pll {
-    background-image: url(../img/s64-pll-01.png);
+    background-image: url(../img/pll-s64-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -91,7 +91,7 @@
 }
 
 .s96-pll {
-    background-image: url(../img/s96-pll-01.png);
+    background-image: url(../img/pll-s96-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 96px;
@@ -183,7 +183,7 @@
 }
 
 .s128-pll {
-    background-image: url(../img/s128-pll-01.png);
+    background-image: url(../img/pll-s128-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
