--- a/css/2lllef.css
+++ b/css/2lllef.css
@@ -1,5 +1,5 @@
-.s64-2l-llef {
-    background-image: url(../img/2l-llef-s64-01.png);
+.s64-2lllef {
+    background-image: url(../img/2lllef-s64-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -34,8 +34,8 @@
     background-position: 0 -128px;
 }
 
-.s96-2l-llef {
-    background-image: url(../img/2l-llef-s96-01.png);
+.s96-2lllef {
+    background-image: url(../img/2lllef-s96-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 96px;
@@ -70,8 +70,8 @@
     background-position: 0 -192px;
 }
 
-.s128-2l-llef {
-    background-image: url(../img/2l-llef-s128-01.png);
+.s128-2lllef {
+    background-image: url(../img/2lllef-s128-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
