--- a/css/2loll.css
+++ b/css/2loll.css
@@ -1,5 +1,5 @@
-.s64-2l-oll {
-    background-image: url(../img/2l-oll-s64-05.png);
+.s64-2loll {
+    background-image: url(../img/2loll-s64-05.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -54,8 +54,8 @@
     background-position: -192px -128px;
 }
 
-.s96-2l-oll {
-    background-image: url(../img/2l-oll-s96-05.png);
+.s96-2loll {
+    background-image: url(../img/2loll-s96-05.png);
     background-repeat: no-repeat;
     display: block;
     width: 96px;
@@ -110,8 +110,8 @@
     background-position: -288px -192px;
 }
 
-.s128-2l-oll {
-    background-image: url(../img/2l-oll-s128-05.png);
+.s128-2loll {
+    background-image: url(../img/2loll-s128-05.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
