--- a/css/2lell.css
+++ b/css/2lell.css
@@ -1,5 +1,5 @@
-.s64-2l-ell {
-    background-image: url(../img/2l-ell-s64-01.png);
+.s64-2lell {
+    background-image: url(../img/2lell-s64-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -38,8 +38,8 @@
     background-position: -128px -128px;
 }
 
-.s96-2l-ell {
-    background-image: url(../img/2l-ell-s96-01.png);
+.s96-2lell {
+    background-image: url(../img/2lell-s96-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 96px;
@@ -82,8 +82,8 @@
     background-position: -192px -192px;
 }
 
-.s128-2l-ell {
-    background-image: url(../img/2l-ell-s128-01.png);
+.s128-2lell {
+    background-image: url(../img/2lell-s128-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
