--- a/css/2ll4c.css
+++ b/css/2ll4c.css
@@ -1,5 +1,5 @@
-.s64-2l-l4c {
-    background-image: url(../img/2l-l4c-s64-01.png);
+.s64-2ll4c {
+    background-image: url(../img/2ll4c-s64-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -58,8 +58,8 @@
     background-position: 0 -192px;
 }
 
-.s96-2l-l4c {
-    background-image: url(../img/2l-l4c-s96-01.png);
+.s96-2ll4c {
+    background-image: url(../img/2ll4c-s96-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 96px;
@@ -118,8 +118,8 @@
     background-position: 0 -288px;
 }
 
-.s128-2l-l4c {
-    background-image: url(../img/2l-l4c-s128-01.png);
+.s128-2ll4c {
+    background-image: url(../img/2ll4c-s128-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
