--- a/css/2lpll.css
+++ b/css/2lpll.css
@@ -1,5 +1,5 @@
-.s64-2l-pll {
-    background-image: url(../img/2l-pll-s64-01.png);
+.s64-2lpll {
+    background-image: url(../img/2lpll-s64-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 64px;
@@ -38,8 +38,8 @@
     background-position: -64px -128px;
 }
 
-.s96-2l-pll {
-    background-image: url(../img/2l-pll-s96-01.png);
+.s96-2lpll {
+    background-image: url(../img/2lpll-s96-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 96px;
@@ -78,8 +78,8 @@
     background-position: -96px -192px;
 }
 
-.s128-2l-pll {
-    background-image: url(../img/2l-pll-s128-01.png);
+.s128-2lpll {
+    background-image: url(../img/2lpll-s128-01.png);
     background-repeat: no-repeat;
     display: block;
     width: 128px;
