--- a/css/2lell.css
+++ b/css/2lell.css
@@ -6,15 +6,15 @@
     height: 64px;
 }
 
-.s64-eoll-20
+.s64-eoll-20 {
     background-position: -64px 0;
 }
 
-.s64-eoll-28
+.s64-eoll-28 {
     background-position: -128px 0;
 }
 
-.s64-eoll-57
+.s64-eoll-57 {
     background-position: 0 -64px;
 }
 
@@ -50,15 +50,15 @@
     background-position: 0 0;
 }
 
-.s96-eoll-20
+.s96-eoll-20 {
     background-position: -96px 0;
 }
 
-.s96-eoll-28
+.s96-eoll-28 {
     background-position: -192px 0;
 }
 
-.s96-eoll-57
+.s96-eoll-57 {
     background-position: 0 -96px;
 }
 
@@ -94,15 +94,15 @@
     background-position: 0 0;
 }
 
-.s128-eoll-20
+.s128-eoll-20 {
     background-position: -128px 0;
 }
 
-.s128-eoll-28
+.s128-eoll-28 {
     background-position: -256px 0;
 }
 
-.s128-eoll-57
+.s128-eoll-57 {
     background-position: 0 -128px;
 }
 
