Fix restoration of windows scroll position
Commented out overflow-x as it results in pageYOffset always being 0
I can't remember if overflow-x was added for any specific reason.
It's likely that I'll discover a browser where I added it for some reason!

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,8 @@
 html, body {
   /* disable webkit tap highlight */
   -webkit-tap-highlight-color: transparent;
-  overflow-x: hidden;
+  /* overflow-x breaks storeWindowOffset() because window.pageYOffset always returns 0 */
+  /* overflow-x: hidden; */
   height: 100%;
   /* enable momentum scrolling in iOS overflow elements */
   /* TODO - figure out why it is necessary */
