--- a/css/2spll.css
+++ b/css/2spll.css
@@ -1,3 +1,13 @@
+.bg1
+{
+  background-color: PaleGoldenRod;
+}
+
+.bg2
+{
+  background-color: GoldenRod;
+}
+
 .s64-pll {
     background-image: url(../img/2spll-s64-02.png);
     background-repeat: no-repeat;
