--- a/css/main.css
+++ b/css/main.css
@@ -137,9 +137,20 @@ td.inactive
 
 /* Sprites */
 
-.clicky:hover
+.clicky
 {
   cursor: pointer;
+}
+
+i.clicky:hover
+{
   box-shadow: 0px 0px 30px 10px lightgrey;
   transition: 0.25s;
+}
+
+span.clicky:hover
+{
+  background: #000;
+  color: #FFF;
+  opacity: 0.5;
 }
