--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ td.inactive
   color: grey;
 }
 
-/* Sprites */
+/* Links */
 
 .clicky
 {
@@ -145,6 +145,27 @@ i.clicky:hover
 {
   box-shadow: 0px 0px 30px 10px lightgrey;
   transition: 0.25s;
+}
+
+a.clicky
+{
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a.clicky:hover
+{
+  background: #000;
+  color: #FFF;
+  opacity: 0.5;
+}
+
+span.clicky
+{
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 span.clicky:hover
